--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,24 @@
 
         }
 
+        .loading-container {
+            @apply w-full flex items-center justify-center mt-10 md:mt-12 rounded-md h-[calc(100vh-325px)] md:h-[calc(100vh-300px)] shadow-light-mode dark:shadow-dark-mode transition-all duration-500 bg-white dark:bg-blue-900;
+
+            .loading-wrapper {
+                @apply flex flex-col items-center gap-8 text-center animate-pulse;
+
+                .loading-icon {
+                    @apply size-16 text-grey-950 animate-spin;
+                }
+
+                p {
+                    @apply text-2xl md:text-3xl;
+                }
+
+            }
+
+        }
+
         .countries-grid {
             @apply w-full h-full pt-10 md:pt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-16 place-items-center md:place-items-start;
 
